--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "coop-cred",
   "version": "1.0.0",
-  "type": "commonjs",
+  "type": "module",
   "description": "",
-  "main": "server.ts",
+  "main": "server.js",
   "scripts": {
-    "dev": "npx tsx src/swagger.ts && tsx watch src/server.ts",
-    "build": "npx tsx src/swagger.ts && tsc",
-    "start": "node dist/server.js"
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "Raimundo Martins Barreto",
@@ -23,15 +22,6 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "@types/bcrypt": "^6.0.0",
-    "@types/cors": "^2.8.19",
-    "@types/dotenv": "^8.2.3",
-    "@types/express": "^5.0.5",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.10.0",
-    "@types/swagger-ui-express": "^4.1.8",
-    "ts-node-dev": "^2.0.0",
-    "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
+    "nodemon": "^3.1.10"
   }
 }
