--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "dev": "dotenv -e .env.development -- nodemon src/server.js",
+    "start": "dotenv -e .env.docker -- node src/server.js",
+    "test": "set NODE_OPTIONS=--experimental-vm-modules && jest --runInBand"
   },
   "keywords": [],
   "author": "Raimundo Martins Barreto",
@@ -22,6 +23,10 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "dotenv-cli": "^11.0.0",
+    "jest": "^30.2.0",
+    "mongodb-memory-server": "^10.3.0",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.4"
   }
 }
