Refactor code structure for improved readability and maintainability, add Winston + Morgan + Sentry and github actions

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-.env
-/dist
 /node_modules
+/dist
 /coverage
-package-lock.json
+/logs
+
+.env
 .env.development
 .env.production
 .env.docker
+
+package-lock.json
