--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,6 @@
 PORT=3000
 MONGO_URI=mongodb://localhost:27017/nome-do-banco
 JWT_SECRET=sua-chave-secreta
+NODE_ENV=development
+
+SENTRY_DSN=https://uuid@string.ingest.us.sentry.io/numberProject
