--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Raimundo Martins Barreto",
   "license": "ISC",
   "dependencies": {
+    "@sentry/browser": "^10.24.0",
+    "@sentry/node": "^10.24.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -20,8 +22,10 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
+    "morgan": "^1.10.1",
     "swagger-autogen": "^2.23.7",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
