--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,15 @@
-name: Deploy to AWS ECS
+name: Deploy AWS ECS
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Configure AWS credentials
@@ -24,19 +23,16 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build, tag, and push image to Amazon ECR
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: coop-cred
-          IMAGE_TAG: latest
+      - name: Build, tag, and push image to ECR
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker build -t coop-cred .
+          docker tag coop-cred:latest ${{ steps.login-ecr.outputs.registry }}/coop-cred:latest
+          docker push ${{ steps.login-ecr.outputs.registry }}/coop-cred:latest
 
       - name: Deploy to ECS
         uses: aws-actions/amazon-ecs-deploy-task-definition@v2
         with:
-          task-definition: ecs-task-def.json
+          task-definition: coop-cred-task
           service: coop-cred-service
           cluster: coop-cred-cluster
           wait-for-service-stability: true
