--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Deploy to ECS
         uses: aws-actions/amazon-ecs-deploy-task-definition@v2
         with:
-          task-definition: coop-cred-task
+          task-definition: ecs-task-def.json
           service: coop-cred-service
           cluster: coop-cred-cluster
           wait-for-service-stability: true
