--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,7 +88,7 @@ jobs:
                   { "name": "NODE_ENV", "value": "production" },
                   { "name": "JWT_SECRET", "value": "${{ secrets.JWT_SECRET }}" },
                   { "name": "SENTRY_DSN", "value": "${{ secrets.SENTRY_DSN }}" },
-                  { "name": "MONGO_URL", "value": "${{ secrets.MONGO_URL }}" }
+                  { "name": "MONGO_URL", "value": "mongodb://mongo:27017/coopcred" }
                 ],
                 "dependsOn": [
                   {
