--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,9 +86,9 @@ jobs:
                 "environment": [
                   { "name": "PORT", "value": "3000" },
                   { "name": "NODE_ENV", "value": "production" },
+                  { "name": "MONGO_URL", "value": "mongodb://mongo:27017/coopcred" },
                   { "name": "JWT_SECRET", "value": "${{ secrets.JWT_SECRET }}" },
-                  { "name": "SENTRY_DSN", "value": "${{ secrets.SENTRY_DSN }}" },
-                  { "name": "MONGO_URL", "value": "mongodb://mongo:27017/coopcred" }
+                  { "name": "SENTRY_DSN", "value": "${{ secrets.SENTRY_DSN }}" }
                 ],
                 "dependsOn": [
                   {
