replace MONGO_URI to MONGO_URL

--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,5 @@
 PORT=3000
-MONGO_URI=mongodb://localhost:27017/nome-do-banco
+MONGO_URL=mongodb://localhost:27017/nome-do-banco
 JWT_SECRET=sua-chave-secreta
 NODE_ENV=development
 
